# tinybtc

./: .gitignore  CMakeLists.txt
src/: Block.h  blockchain.c  blockchain.h  comm.c  comm.h  command.h  communication.c  communication.h  config.c  config.h  constants.h  data.c  data.h  datatypes.h  genesis.c  genesis.h  getdata.h  globalstate.c  globalstate.h  hash.c  hash.h  hashmap.c  hashmap.h  inet.c  inet.h  main.c  message.c  message.h  mine.c  mine.h  networking.c  networking.h  parameters.c  parameters.h  peer.c  peer.h  persistent.c  persistent.h  script.c  script.h  (+5 more)
src/messages/: addr.c  addr.h  block.c  block.h  blockreq.c  blockreq.h  common.c  common.h  getaddr.c  getaddr.h  getdata.h  getheaders.c  getheaders.h  header.c  header.h  headers.c  headers.h  inv.c  inv.h  pingpong.c  pingpong.h  print.c  print.h  reject.c  reject.h  sendheaders.c  sendheaders.h  shared.c  shared.h  tx.c  tx.h  verack.c  verack.h  version.c  version.h
src/test/: test.c
src/utils/: bignum.c  bignum.h  data.c  data.h  datetime.c  datetime.h  file.c  file.h  integers.c  integers.h  ip.c  ip.h  memory.c  memory.h  networking.c  networking.h  opt.c  opt.h  random.c  random.h  strings.c  strings.h
